# myinspectra-extended

./: .env.sample  .gitignore  CLAUDE.md  README.md  docker-compose.yml  myinspectra-extended.drawio
backend/: .dockerignore  Dockerfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
backend/api/: admin.py  models.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_user_joined_date_user_phone.py  0003_prediction.py  0004_report.py
backend/api/templates/: index.html
backend/backend/: settings.py  urls.py
backend/myinspectra/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
backend/myinspectra/migrations/: 0001_initial.py  0002_alter_cxrmodel_unique_together_cxrmodel_api_url_and_more.py  0002_dicomfile.py
backend/myinspectra/templates/: upload_test.html
backend/scripts/: clean_migration.sh  create_superuser.py  populate_db.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ImageUploader.tsx
frontend/src/components/: Dropzone.tsx  History.tsx  PdfPreviewModal.css  PdfPreviewModal.tsx  Sidebar.tsx
frontend/src/components/History/: CaseTable.css  CaseTable.tsx  index.ts
frontend/src/components/Layout/: Layout.css  Layout.tsx  Sidebar.css  Sidebar.tsx
frontend/src/pages/: CasePreviewPage.css  CasePreviewPage.tsx  HistoryPage.css  HistoryPage.tsx  HomePage.css  HomePage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
frontend/src/utils/: pdfExport.ts
(+3 files in other folders)
