[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.13",
    "botocore>=1.42.13",
    "django>=6.0",
    "django-cors-headers>=4.9.0",
    "django-storages>=1.14.6",
    "gunicorn>=23.0.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pydicom>=3.0.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-image>=0.25.2",
    "whitenoise>=6.11.0",
]
